# ai-policy-advisor

./: .Rbuildignore  .gitignore  DESCRIPTION  MANIFEST.in  NAMESPACE  README.md  __init__.py  ai_policy_advisor.py  ai_policy_advisor.r  pyproject.toml
R/: API.R  ai_policy_advisor.R
Rpkg/: DESCRIPTION  NAMESPACE
Rpkg/R/: ai_policy_advisor.R  pkgenv.R
man/: add_to_ai_prompt.Rd  ai_policy_advisor.Rd
python/: README.md  pyproject.toml  requirements.txt
python/ai_policy_advisor/: __init__.py  ai_policy_advisor.py
python/tests/: test_ai_policy_advisor.py
